[package]
name = "rschain"
version = "0.0.1"
authors = ["t10471 <t104711202@gmail.com>"]

[dependencies]
clap = {version = "2.32", features = ["yaml"]}
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-fs = "0.1"
futures = "0.1.20"
bytes = "0.4"
http = "0.1"
httparse = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
hyper = "0.12"
ed25519-dalek = "^0.6"
sha2 = "^0.7"
rand = "0.4"
rust-base58 = "*"
rocksdb = "0.10"
protobuf = { version = "~2.0", features = ["with-bytes"] }
protos = { path = "protos" }
ctrlc = { version = "3.0", features = ["termination"] }
tokio-timer = "0.2"
jsonrpc-core = { path = "./jsonrpc/core" }
jsonrpc-http-server = { path = "./jsonrpc/http" }
jsonrpc-macros = { path = "./jsonrpc/macros" }
jsonrpc-server-utils = { path = "./jsonrpc/server-utils" }

[[bin]]
path = "rschain/main.rs"
name = "rschain"

[workspace]
members = [
    "protos",
]