[package]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
license = "MIT"
name = "jsonrpc-core"
version = "8.0.2"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]

[dependencies]
log = "0.4"
futures = "0.1.20"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"