[package]
description = "Rust http server using JSONRPC 2.0."
license = "MIT"
name = "jsonrpc-http-server"
version = "8.0.1"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]

[dependencies]
hyper = "0.12"
jsonrpc-core = { version = "8.0", path = "../core" }
jsonrpc-server-utils = { version = "8.0", path = "../server-utils" }
log = "0.4"
net2 = "0.2"
unicase = "2.0"
mime = "0.3"
http = "0.1"
headers = { git = "https://github.com/hyperium/headers" }
tokio = "0.1"