[package]
description = "Helper macros for jsonrpc-core"
license = "MIT"
name = "jsonrpc-macros"
version = "8.0.1"
authors = ["rphmeier <robert@parity.io>"]
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]

[dependencies]
serde = "1.0"
jsonrpc-core = { version = "8.0", path = "../core" }
